tests ready for final delivery